deploy: edde81498adb4223c273a5f6c394bf98e17a5b38

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.QY7stIbe.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CjNzWgxH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BUtv47cv.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.GNEL411v.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.DE9z-Gs9.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.VAyhc2KM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.LQgfgOEz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BgQypJUT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Df8DT_t0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.dYCddi_c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.DDp5QzRX.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C_ukCpnI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.Drgb2t6z.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.DGNHstne.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Dqhu3ZtU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CUVLovL4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.PlR9BFkR.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.PRTnRqqn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.FHmgczzm.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_u74mgs = {
+					__sveltekit_lp8n4t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.QY7stIbe.js"),
-						import("./_app/immutable/entry/app.VAyhc2KM.js")
+						import("./_app/immutable/entry/start.BUtv47cv.js"),
+						import("./_app/immutable/entry/app.LQgfgOEz.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
