deploy: 74122bd7c4b5920c02d04c9ff02c891d91a42f59

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CKvGVWkc.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BgMGpEq3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CWpgfFb7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BtrlhtRj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CFYtZ9C8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.23H_qbP1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bve_f6WJ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BhwhHJvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.hGTx8sci.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.qJrxnjUV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.aGEd1IlC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DCqQfRHt.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.STLbCTzP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4VsmEEk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CqosnLW7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DVYDhC4Q.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CbgpMgqx.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.C0JH0TCE.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_11lcion = {
+					__sveltekit_1h2yd6k = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CKvGVWkc.js"),
-						import("./_app/immutable/entry/app.23H_qbP1.js")
+						import("./_app/immutable/entry/start.CWpgfFb7.js"),
+						import("./_app/immutable/entry/app.Bve_f6WJ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
