deploy: 77d21a35eedcedef975f0fd03273cc8289a43da9

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CWpgfFb7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BtrlhtRj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.HE_fEYEB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DCph7rQN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CFYtZ9C8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bve_f6WJ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Cn_7o8Pa.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BhwhHJvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.hGTx8sci.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.qJrxnjUV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.aGEd1IlC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.STLbCTzP.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BZg_ejsW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4VsmEEk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DVYDhC4Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bsp3nRXY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CbgpMgqx.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.ChLHWxTS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.4VXHTORS.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1h2yd6k = {
+					__sveltekit_d7bc37 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CWpgfFb7.js"),
-						import("./_app/immutable/entry/app.Bve_f6WJ.js")
+						import("./_app/immutable/entry/start.HE_fEYEB.js"),
+						import("./_app/immutable/entry/app.Cn_7o8Pa.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
