--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.umUtpQIh.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.rWyMaIul.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DoSF9wuV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.s7avpVlq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CFYtZ9C8.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0EfmFztn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.E5V-7iIo.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BhwhHJvv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.hGTx8sci.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.qJrxnjUV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.aGEd1IlC.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DyY4M2IU.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.5R4nQcc6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.B4VsmEEk.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D4h3o0ri.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DmN31kCw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.CbgpMgqx.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.C0JH0TCE.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1j55y6y = {
+					__sveltekit_uzk718 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.umUtpQIh.js"),
-						import("./_app/immutable/entry/app.0EfmFztn.js")
+						import("./_app/immutable/entry/start.DoSF9wuV.js"),
+						import("./_app/immutable/entry/app.E5V-7iIo.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
