deploy: c1ae09004d25776aafe2baa3f7fd75f07e80d905

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DTOb7AXl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DYYEkQGM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.xW4sgvYF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BY1U3dYe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BUv4FOh_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CtpfPdsZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.xt72ggqN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMFQBS5n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C_NTUxiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BpjEd2y2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.WicB1v4G.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYt8w7tI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGTvBPm3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9FiMH9i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BNZ1YN9r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BgmYAv3F.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mUzeHgD-.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Db93vz-2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.t0yKvcuV.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_h6hldo = {
+					__sveltekit_1q9iiey = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DTOb7AXl.js"),
-						import("./_app/immutable/entry/app.CtpfPdsZ.js")
+						import("./_app/immutable/entry/start.xW4sgvYF.js"),
+						import("./_app/immutable/entry/app.xt72ggqN.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
