--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.xW4sgvYF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BY1U3dYe.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.YT_Q_JHN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BBGrRBYS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BUv4FOh_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.xt72ggqN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dvp1y7mM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMFQBS5n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C_NTUxiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BpjEd2y2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.WicB1v4G.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DGTvBPm3.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CceH4GfF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9FiMH9i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BgmYAv3F.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.fOaIF2jn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mUzeHgD-.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.BmkElamN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.t0yKvcuV.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1q9iiey = {
+					__sveltekit_zuqhco = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.xW4sgvYF.js"),
-						import("./_app/immutable/entry/app.xt72ggqN.js")
+						import("./_app/immutable/entry/start.YT_Q_JHN.js"),
+						import("./_app/immutable/entry/app.Dvp1y7mM.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
