--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CoAh863q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C5TuJBmY.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C_Ay5k1M.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.R9IDCVRX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BUv4FOh_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CHk6flwk.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.U_jFXRzn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMFQBS5n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C_NTUxiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BpjEd2y2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.WicB1v4G.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.C4Kin8io.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CEaQgat4.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9FiMH9i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CEut9SN_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cni4l7_C.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mUzeHgD-.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Db93vz-2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.t0yKvcuV.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_h1fkvl = {
+					__sveltekit_1uamq58 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CoAh863q.js"),
-						import("./_app/immutable/entry/app.CHk6flwk.js")
+						import("./_app/immutable/entry/start.C_Ay5k1M.js"),
+						import("./_app/immutable/entry/app.U_jFXRzn.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
