--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Bfw88npD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DXx0MzfF.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DJsU672b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BxOGooql.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BUv4FOh_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DyEn_HlI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CTKoUhMH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMFQBS5n.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C_NTUxiM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BpjEd2y2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.WicB1v4G.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Csa_LJBy.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BcbvPveZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9FiMH9i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CXURtnZ0.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DqNWwzsm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mUzeHgD-.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Db93vz-2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.t0yKvcuV.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1fwkzsl = {
+					__sveltekit_m4aes3 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Bfw88npD.js"),
-						import("./_app/immutable/entry/app.DyEn_HlI.js")
+						import("./_app/immutable/entry/start.DJsU672b.js"),
+						import("./_app/immutable/entry/app.CTKoUhMH.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
