--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DJsU672b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BxOGooql.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.BUv4FOh_.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CTKoUhMH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMFQBS5n.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.C_NTUxiM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.BpjEd2y2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.WicB1v4G.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BcbvPveZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.D9FiMH9i.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DqNWwzsm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.mUzeHgD-.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.CVn6yHGw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Da73eOPb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZ1J2XT6.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CtdDeeqi.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.BFSsBS53.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.BkLmR0ID.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdxyPp-Q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bq6h77nV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.gSMW2kEx.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents"><!--[--><!--[--><!----><header class="svelte-1qgrqm"><h1 class="svelte-1qgrqm">OpenAI GUI Utils</h1> <nav class="svelte-1qgrqm"><a href="./" class="svelte-1qgrqm ">Home</a> <a href="completions" class="svelte-1qgrqm ">Completion API Visualizer</a> <a href="embeddings" class="svelte-1qgrqm ">Embeddings and Cosine Similarity Checker</a></nav> <a href="https://github.com/baseballyama/openai-gui-utils" target="_blank" rel="noopener noreferrer"><svg version="1.1" width="32" height="32" viewBox="0 0 16 16" class="octicon octicon-mark-github svelte-92nypd svelte-1bvf986" aria-hidden="true"><path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z" class="svelte-92nypd" style="fill: rgb(44, 62, 80);"></path></svg></a><!----></header> <main class="svelte-1qgrqm"><!----><!----><div class="top-page svelte-1azi8io"><p>This site contains small utilities that are frequently used when developing products using
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_m4aes3 = {
+					__sveltekit_alosk7 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DJsU672b.js"),
-						import("./_app/immutable/entry/app.CTKoUhMH.js")
+						import("./_app/immutable/entry/start.Da73eOPb.js"),
+						import("./_app/immutable/entry/app.CtdDeeqi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
