deploy: fea102189b54e474f19a7f939d78e37de16c2147

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Da73eOPb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZ1J2XT6.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BZOhpBoB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dh03bs8S.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CtdDeeqi.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CoUGkQiE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BFSsBS53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BkLmR0ID.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BdxyPp-Q.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9NUIZF-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Bq6h77nV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DXVkTDiF.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.DRCz6BrX.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_alosk7 = {
+					__sveltekit_1suu67w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Da73eOPb.js"),
-						import("./_app/immutable/entry/app.CtdDeeqi.js")
+						import("./_app/immutable/entry/start.BZOhpBoB.js"),
+						import("./_app/immutable/entry/app.CoUGkQiE.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
