--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BZOhpBoB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dh03bs8S.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.2wmDOxOH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.QSa55uc9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CoUGkQiE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C8vN81mB.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BFSsBS53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BkLmR0ID.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B9NUIZF-.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D9DzHYlc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DXVkTDiF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DMorHbv_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.gSMW2kEx.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1suu67w = {
+					__sveltekit_1a3udqw = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BZOhpBoB.js"),
-						import("./_app/immutable/entry/app.CoUGkQiE.js")
+						import("./_app/immutable/entry/start.2wmDOxOH.js"),
+						import("./_app/immutable/entry/app.C8vN81mB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
