--- a/completions.html
+++ b/completions.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BKo6Gij9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BV4VH11l.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DzDGZb67.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CsDDRsZR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.q9oAhVBf.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.2gtcBpT_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.BFSsBS53.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BkLmR0ID.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DuFv78e1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.P1amLD9O.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.qTkW_bHY.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BHTQv3Kw.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.BHjS6af1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.DUZQinoh.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_lipfv7 = {
+					__sveltekit_1s3fa0s = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BKo6Gij9.js"),
-						import("./_app/immutable/entry/app.q9oAhVBf.js")
+						import("./_app/immutable/entry/start.DzDGZb67.js"),
+						import("./_app/immutable/entry/app.2gtcBpT_.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
