--- a/completions.html
+++ b/completions.html
@@ -9,19 +9,19 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BuOyaNTs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIvqfVFZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D01bFeuQ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BD6hwqfx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CVqomNI2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.BFSsBS53.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B2y19D1y.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Bd00s2by.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2GE2rcu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BJ9zgRtt.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7HeVhRP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.D8wjxqJn.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.CtUuVn_5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1bv3uvw = {
+					__sveltekit_141yacz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BuOyaNTs.js"),
-						import("./_app/immutable/entry/app.CVqomNI2.js")
+						import("./_app/immutable/entry/start.D01bFeuQ.js"),
+						import("./_app/immutable/entry/app.B2y19D1y.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
