deploy: 0511bcc8228d2214128f43ac2277f552fa452bee

--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D01bFeuQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BD6hwqfx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B4-LVxx7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DVk2-1lI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B2y19D1y.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CYwczY-P.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2GE2rcu.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DSlhYOKk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D7HeVhRP.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BhBGKK0R.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.CtUuVn_5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_141yacz = {
+					__sveltekit_y5i65w = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D01bFeuQ.js"),
-						import("./_app/immutable/entry/app.B2y19D1y.js")
+						import("./_app/immutable/entry/start.B4-LVxx7.js"),
+						import("./_app/immutable/entry/app.CYwczY-P.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
