deploy: 394151ebde483c65520bcd0e20f0bb812bd0870f

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Cu7xtntZ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DJmFpY6i.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dn41Adhb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vvbtLIeV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Fi_c4Qct.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CU8svkjx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CneFNC5u.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.qjtrNDgc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BGBcBsnN.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cl8zY_Ug.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.4kCvycJb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_2o3uzj = {
+					__sveltekit_3s2y5t = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Cu7xtntZ.js"),
-						import("./_app/immutable/entry/app.Fi_c4Qct.js")
+						import("./_app/immutable/entry/start.Dn41Adhb.js"),
+						import("./_app/immutable/entry/app.CU8svkjx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
