--- a/completions.html
+++ b/completions.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/3.D925Ie99.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dn41Adhb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vvbtLIeV.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D-UZWq5S.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B54egQz1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CU8svkjx.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CglPtDad.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.qjtrNDgc.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.UihOzOl1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Cl8zY_Ug.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CgYKZdwM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.Ddgjabb9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_3s2y5t = {
+					__sveltekit_1gcdlow = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dn41Adhb.js"),
-						import("./_app/immutable/entry/app.CU8svkjx.js")
+						import("./_app/immutable/entry/start.D-UZWq5S.js"),
+						import("./_app/immutable/entry/app.CglPtDad.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
