deploy: cc03d4730952109d5a297cd32a74bd891ce0b5c3

--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D-UZWq5S.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B54egQz1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DMPbwP7M.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BIfhocKN.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CglPtDad.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DxbcUYl0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.UihOzOl1.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BygT3Cht.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.CgYKZdwM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BJeDtfH5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.4kCvycJb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1gcdlow = {
+					__sveltekit_fa6ssd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D-UZWq5S.js"),
-						import("./_app/immutable/entry/app.CglPtDad.js")
+						import("./_app/immutable/entry/start.DMPbwP7M.js"),
+						import("./_app/immutable/entry/app.DxbcUYl0.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
