deploy: 05cf7b5bd30b9ed149543cc499cf9db03e96d25e

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.makAnHTB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.kfZH093G.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CL3pb6PU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.KLF851x-.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.QysWp32b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B3gMi_xr.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DiZ8nSRY.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BrrYHAUs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.Dbuz-hfd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.oRXRJeyW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.gSMW2kEx.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1b5v2ol = {
+					__sveltekit_cr4fo4 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.makAnHTB.js"),
-						import("./_app/immutable/entry/app.QysWp32b.js")
+						import("./_app/immutable/entry/start.CL3pb6PU.js"),
+						import("./_app/immutable/entry/app.B3gMi_xr.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
