deploy: ecdda03406bb3b7af8d70899653e4745fd5909bd

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BS95MTbS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.vcJXVqCw.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BiDpQVZ8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DW2i7CCm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Bq5xMPNW.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B7TsMxjH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CJM_3xnT.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.zBszcvR9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DThu9YLa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DQzrGixW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.gSMW2kEx.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1chueqe = {
+					__sveltekit_1ss2yyn = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BS95MTbS.js"),
-						import("./_app/immutable/entry/app.Bq5xMPNW.js")
+						import("./_app/immutable/entry/start.BiDpQVZ8.js"),
+						import("./_app/immutable/entry/app.B7TsMxjH.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
