--- a/embeddings.html
+++ b/embeddings.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/4.BfC-7cBh.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BiDpQVZ8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DW2i7CCm.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BhevqTZz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DO6FxPws.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B7TsMxjH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DQdA69Ug.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.xOaXH0fK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D2u4SeCP.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.ZA7qb4Hz.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.C239lJAN.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.zBszcvR9.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DZ4w9tep.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.ygUjBjtg.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.DQzrGixW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.D0ekio5L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.AYSCMNQw.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.4kCvycJb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.CWocde0M.js">
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_1ss2yyn = {
+					__sveltekit_gnbhci = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BiDpQVZ8.js"),
-						import("./_app/immutable/entry/app.B7TsMxjH.js")
+						import("./_app/immutable/entry/start.BhevqTZz.js"),
+						import("./_app/immutable/entry/app.DQdA69Ug.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
