deploy: 51a7c0c7fdb4d92d21038cacd141f7df6638d4db

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		
 		<link href="./_app/immutable/assets/0.SwhSQTLN.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.CZi8PWBX.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.C6Qw8Dm-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DEevaAWb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.bS_V3KFq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bm974B61.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.8FjZJPOv.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BSUeftYN.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CbexkOH2.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.DPwpX9Sx.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.BlBN8Nnu.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.BSvEsP6a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.D9oKLnUn.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CdUB-r3Y.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.ChUorkoj.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/class.Dv8WUrm-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BgYiMEVg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.BzNDORjn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.Ca_1zhmX.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.BywOJWEf.js">
 	</head>
@@ -29,7 +29,7 @@
 			
 			<script>
 				{
-					__sveltekit_xcyra4 = {
+					__sveltekit_68y398 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/openai-gui-utils"
 					};
@@ -39,8 +39,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.C6Qw8Dm-.js"),
-						import("./_app/immutable/entry/app.BSUeftYN.js")
+						import("./_app/immutable/entry/start.bS_V3KFq.js"),
+						import("./_app/immutable/entry/app.CbexkOH2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
